dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  labels:
    app: dashboard
  namespace: kubernetes-dashboard

spec:
  ingressClassName: nginx
  rules:
    - host: dashboard.192.168.1.240.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard-web
                port:
                  number: 8000
